<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThemMonAnActivity">

    <TextView
        android:id="@+id/txtTitleAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add_dish"
        android:textColor="#ff00"
        android:textSize="50sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitleAdd"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_dish_name" />

    <EditText
        android:id="@+id/edPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edName"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_dish_price"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/edAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edPrice"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_address" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/add" />


</RelativeLayout>